add video uploading!

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
 	"require": {
 		"twig/twig": "^3.0",
-		"mpratt/relativetime": "dev-master"
+		"mpratt/relativetime": "dev-master",
+		"aminyazdanpanah/php-ffmpeg-video-streaming": "dev-master",
+		"intervention/image": "^2.5"
 	},
 	"minimum-stability": "dev",
 	"config": {
