--- a/bootstrap/config.json
+++ b/bootstrap/config.json
@@ -9,7 +9,7 @@
     "@brand-primary": "darken(#428bca, 6.5%)",
     "@brand-success": "#46b846",
     "@brand-info": "#4f9be8",
-    "@brand-warning": "#ffca42",
+    "@brand-warning": "#f5be27",
     "@brand-danger": "#d13b36",
     "@body-bg": "#ececec",
     "@text-color": "@gray-dark",
@@ -75,9 +75,9 @@
     "@btn-info-color": "#fff",
     "@btn-info-bg": "@brand-info",
     "@btn-info-border": "darken(@btn-info-bg, 5%)",
-    "@btn-warning-color": "#fff",
-    "@btn-warning-bg": "@brand-warning",
-    "@btn-warning-border": "darken(@btn-warning-bg, 5%)",
+    "@btn-warning-color": "#994800",
+    "@btn-warning-bg": "#FED81C",
+    "@btn-warning-border": "#ECC101",
     "@btn-danger-color": "#fff",
     "@btn-danger-bg": "@brand-danger",
     "@btn-danger-border": "darken(@btn-danger-bg, 5%)",
