--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
 		"twig/markdown-extra": "3.x-dev",
 		"erusev/parsedown": "dev-master",
 		"twbs/bootstrap": "5.0.1",
-		"scssphp/scssphp": "^1.4.1"
+		"scssphp/scssphp": "1.4.1"
 	},
 	"minimum-stability": "dev",
 	"config": {
