--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ vendor/
 composer.lock
 bootstrap/css/bootstrap.css
 bootstrap/css/bootstrap-theme.css
+
+## pre-cached stylesheets
+assets/bs.css
+assets/bs-dark.css
