--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,6 @@ bootstrap/css/bootstrap-theme.css
 ## pre-cached stylesheets
 assets/bs.css
 assets/bs-dark.css
-adminer-*.php
+
+## Admin features
+adminer.php
