add directory for gamerappa site
icty do not revert this, i am not going to bother with nginx nor will be reviving the mid-2020 "animal crossing era" chaziz website.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,4 @@ assets/bs-dark.css
 
 ## Admin features
 adminer-*.php
-
-## Gamerappa site for developement purposes
-gamerappasite/
+gamerappa/conf/config.php
