--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"twbs/bootstrap": "5.0.2",
 		"scssphp/scssphp": "1.6.0",
 		"nopjmp/discord-webhooks": "dev-master",
-		"twbs/bootstrap-icons": "dev-composer"
+		"twbs/bootstrap-icons": "dev-composer",
+		"spatie/async": "dev-master"
 	},
 	"minimum-stability": "dev",
 	"config": {
