remove async uploader as it is non-functional
@forkiesassds do NOT revert this change, your code literally doesn't fucking work and having the lastest video on squarebracket being a testicle joke that was uploaded nearly a week ago isn't a good note.

--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
 		"twbs/bootstrap": "5.0.2",
 		"scssphp/scssphp": "1.6.0",
 		"nopjmp/discord-webhooks": "dev-master",
-		"twbs/bootstrap-icons": "dev-composer",
-		"spatie/async": "dev-master"
+		"twbs/bootstrap-icons": "dev-composer"
 	},
 	"minimum-stability": "dev",
 	"config": {
