Do some work on sbNext.
- CSS is now SCSS.
- Nest header and navigation CSS, make selectors less verbose.
- Nest hover and active variants of buttons.
- Compilation scripts for sbNext SCSS. (Dart-SASS w/ watch)
- Slightly saner formatting in some sbNext templates.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ bootstrap/css/bootstrap-theme.css
 ## pre-cached stylesheets
 assets/bs*.css
 assets/bs*.css.map
+assets/main.css
+assets/main.css.map
 
 ## Admin features
 adminer-*.php
