implement pseudo localization
helps finding of missing strings, dependency is a dev only one.

--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,8 @@
 			"type": "vcs",
 			"url": "https://github.com/chazizsquarebracket/RelativeTime"
 		}
-	]
+	],
+	"require-dev": {
+		"arokettu/pseudolocale": "dev-master"
+	}
 }
