--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"twbs/bootstrap": "5.0.2",
 		"scssphp/scssphp": "1.6.0",
 		"nopjmp/discord-webhooks": "dev-master",
-		"twbs/bootstrap-icons": "dev-main"
+		"twbs/bootstrap-icons": "dev-main",
+		"primer/css": "dev-main"
 	},
 	"minimum-stability": "dev",
 	"config": {
@@ -20,7 +21,11 @@
 	"repositories": [
 		{
 			"type": "vcs",
-			"url": "https://github.com/chazizsquarebracket/bs-icons-but-with-composer"
+			"url": "https://github.com/squarebracket-gamerappa/bs-icons-but-with-composer"
+		},
+		{
+			"type": "vcs",
+			"url": "https://github.com/squarebracket-gamerappa/primer"
 		}
 	],
 	"require-dev": {
