Revert "improve dark theme, fix deperecation errors on dart sass, remove pscss compiler"
This reverts commit bfb4d921f5bfdab5fa37d1f2e1c031feed855bc6.

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
 		"intervention/image": "^2.5",
 		"twig/markdown-extra": "3.x-dev",
 		"erusev/parsedown": "dev-master",
+		"scssphp/scssphp": "1.8.1",
 		"nopjmp/discord-webhooks": "dev-master",
 		"twbs/bootstrap-icons": "dev-main"
 	},
