--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
 		"scssphp/scssphp": "1.8.1",
 		"nopjmp/discord-webhooks": "dev-master",
 		"twbs/bootstrap-icons": "dev-main",
-		"php-ffmpeg/php-ffmpeg": "0.x-dev"
+		"php-ffmpeg/php-ffmpeg": "0.x-dev",
 		"suin/php-rss-writer": "dev-master",
 	},
 	"minimum-stability": "dev",
