--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 		"nopjmp/discord-webhooks": "dev-master",
 		"twbs/bootstrap-icons": "dev-main",
 		"php-ffmpeg/php-ffmpeg": "0.x-dev",
-		"suin/php-rss-writer": "dev-master",
+		"suin/php-rss-writer": "dev-master"
 	},
 	"minimum-stability": "dev",
 	"config": {
