--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,5 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^(user/(.*?))/?$ user.php?name=$2
 RewriteRule ^([^\.]+)$ $1.php [NC,L]
