Copy finalium scss for randley layout
The finalium and randley layouts will have a different look, so using the same scss files isn't a good idea.

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ bootstrap/css/bootstrap-theme.css
 assets/bs*.css
 assets/bs*.css.map
 assets/css/*.css
+assets/css-randley/*.css
 assets/dashboard.css
 assets/signin.css
 
