--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
 		"twig/markdown-extra": "3.x-dev",
 		"erusev/parsedown": "dev-master",
 		"twbs/bootstrap-icons": "dev-main",
+		"aminyazdanpanah/php-ffmpeg-video-streaming": "dev-master",
 		"suin/php-rss-writer": "dev-master",
-		"mobiledetect/mobiledetectlib": "dev-master",
-		"php-ffmpeg/php-ffmpeg": "0.x"
+		"mobiledetect/mobiledetectlib": "dev-master"
 	},
 	"minimum-stability": "dev",
 	"config": {
