--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"twbs/bootstrap-icons": "dev-main",
 		"aminyazdanpanah/php-ffmpeg-video-streaming": "dev-master",
 		"suin/php-rss-writer": "dev-master",
-		"mobiledetect/mobiledetectlib": "dev-master"
+		"mobiledetect/mobiledetectlib": "dev-master",
+		"npm-asset/bulma": "^0.9.4"
 	},
 	"minimum-stability": "dev",
 	"config": {
@@ -18,5 +19,11 @@
 	},
 	"require-dev": {
 		"arokettu/pseudolocale": "dev-master"
-	}
+	},
+	"repositories": [
+		{
+			"type": "composer",
+			"url": "https://asset-packagist.org"
+		}
+	]
 }
