--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 		"suin/php-rss-writer": "dev-master",
 		"mobiledetect/mobiledetectlib": "dev-master",
 		"npm-asset/bulma": "^0.9.4",
-		"npm-asset/vizuaalog--bulmajs": "0.12.x-dev"
+		"npm-asset/vizuaalog--bulmajs": "0.12.x-dev",
 		"php-ffmpeg/php-ffmpeg": "0.x"
 	},
 	"minimum-stability": "dev",
