--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"mobiledetect/mobiledetectlib": "dev-master",
 		"npm-asset/bulma": "^0.9.4",
 		"npm-asset/vizuaalog--bulmajs": "0.12.x-dev",
-		"php-ffmpeg/php-ffmpeg": "0.x-dev"
+		"php-ffmpeg/php-ffmpeg": "0.x-dev",
+		"phlak/strgen": "dev-master"
 	},
 	"minimum-stability": "dev",
 	"config": {
