gource script and use current logo on nostalgia

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ public/img
 
 ## bootstrap port made for testing, won't be publishing due to redudancy
 private/templates/bootstrap2021-common
+tools/gourcelog.txt
