--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: /lib/lang/template.json
-    translation: /lib/lang/%locale%.json
+  - source: /private/lang/template.json
+    translation: /private/lang/%locale%.json
