--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"npm-asset/bulma": "^0.9.4",
 		"npm-asset/vizuaalog--bulmajs": "0.12.x-dev",
 		"php-ffmpeg/php-ffmpeg": "0.x-dev",
-		"phlak/strgen": "dev-master"
+		"phlak/strgen": "dev-master",
+		"whitecube/lingua": "dev-master"
 	},
 	"minimum-stability": "dev",
 	"config": {
