--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ public/img
 ## bootstrap port made for testing, won't be publishing due to redudancy
 private/templates/bootstrap2021-common
 tools/gourcelog.txt
+.idea/dataSources.xml
