more docker stuff

--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -4,8 +4,8 @@ upload_max_filesize = 1G
 post_max_size = 1G
 file_uploads = On
 
-; disable errors (DO NOT DO THIS)
-display_errors = Off
+; disable errors (DO NOT DO THIS UNLESS YOU HAVE A REASON TO!)
+; display_errors = Off
 
 [Date]
 date.timezone = "UTC"
