--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"php-ffmpeg/php-ffmpeg": "1.1.0",
 		"whitecube/lingua": "dev-master",
 		"toshy/bunnynet-php": "^3.0",
-		"symfony/http-client": "6.3.x-dev"
+		"symfony/http-client": "6.3.x-dev",
+		"rehike/spfphp": "dev-main"
 	},
 	"minimum-stability": "dev",
 	"config": {
