--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 		"whitecube/lingua": "dev-master",
 		"toshy/bunnynet-php": "^3.0",
 		"symfony/http-client": "6.3.x-dev",
-		"wixel/gump": "dev-master"
+		"wixel/gump": "dev-master",
+		"ext-pdo": "*"
 	},
 	"minimum-stability": "dev",
 	"config": {
