Early implementation of Journals
The "journals" DB table is a repurposed "posts" table, but I've renamed it.

I've also gotten rid of the rough prototype music table from 2 years ago, as music submissions should use the "videos" table like the other submission types.

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 		"toshy/bunnynet-php": "^3.0",
 		"symfony/http-client": "6.3.x-dev",
 		"wixel/gump": "dev-master",
-		"ext-pdo": "*"
+		"ext-pdo": "*",
+		"twig/string-extra": "3.x-dev"
 	},
 	"minimum-stability": "dev",
 	"config": {
