--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 		"symfony/http-client": "6.3.x-dev",
 		"wixel/gump": "dev-master",
 		"ext-pdo": "*",
-		"twig/string-extra": "3.x-dev"
+		"twig/string-extra": "3.x-dev",
+		"twbs/bootstrap": "5.3.2"
 	},
 	"minimum-stability": "dev",
 	"config": {
