--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,5 @@ ads.txt
 /tools/gourcelog.txt
 
 # experimental shit that might be copyright infringing
-/skins/inky_testing
-/public/inky_testing
+skins/inky_testing
+public/inky_testing
