--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,12 @@
 		"erusev/parsedown": "dev-master",
 		"php-ffmpeg/php-ffmpeg": "1.1.0",
 		"toshy/bunnynet-php": "^4.0",
-		"symfony/http-client": "6.3.x-dev",
+		"symfony/http-client": "6.4.x-dev",
 		"wixel/gump": "dev-master",
 		"ext-pdo": "*",
 		"twig/string-extra": "3.x-dev",
-		"twbs/bootstrap": "5.3.2"
+		"twbs/bootstrap": "5.3.2",
+		"psr/http-client": "^1.0@dev"
 	},
 	"minimum-stability": "dev",
 	"config": {
