--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 		"wixel/gump": "dev-master",
 		"ext-pdo": "*",
 		"twig/string-extra": "3.x-dev",
-		"psr/http-client": "^1.0@dev"
+		"psr/http-client": "^1.0@dev",
+		"landrok/activitypub": "dev-master"
 	},
 	"minimum-stability": "dev",
 	"config": {
