--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
 		"ext-pdo": "*",
 		"twig/string-extra": "3.x-dev",
 		"psr/http-client": "^1.0@dev",
-		"landrok/activitypub": "dev-master",
-		"symfony/http-kernel": "7.1.x-dev"
+		"symfony/http-kernel": "7.1.x-dev",
+		"jaybizzle/crawler-detect": "dev-master"
 	},
 	"minimum-stability": "dev",
 	"config": {
