incomplete youtube-to-squarebracket script

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ dynamic/pfp/
 dynamic/thumbnails/
 dynamic/banners/
 dynamic/videos/
+dynamic/videos_test/
 dynamic/art/
 dynamic/art_thumbnails
 dynamic/custom_thumbnails
