--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
 		"twig/string-extra": "3.10.0",
 		"psr/http-client": "1.0.3",
 		"symfony/http-kernel": "7.1.1",
-		"twbs/bootstrap": "^5.3"
+		"twbs/bootstrap": "^5.3",
+		"fortawesome/font-awesome": "^6.5",
+		"twbs/bootstrap-icons": "^1.11"
 	},
 	"minimum-stability": "stable",
 	"config": {
