redo sounds using kde 6 ocean sound scheme as a basis
the old sounds were made on ios garageband which is proprietary and i really don't wanna have to charge my old iphone if i wanna edit them.

the new sounds may be out-of-place with the look and feel of the site, but i don't really care.

--- a/.gitignore
+++ b/.gitignore
@@ -34,8 +34,10 @@ adminer-*.php
 # mariadb stuff from docker
 mariadb-data
 
-# google moment
-ads.txt
-
 # output from 2024-02-video_url_export.php
 /tools/video_urls.txt
+
+# sound stuff
+*.bak
+*.sfk
+Ocean_Sound_Theme_OpenSB.wav
