shoehorn new codebase into old codebase

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 ## User-generated files
 private/logs/
 private/conf/config.php
+private/config/config.php
 private/templates/cache/
 templates/cache/
 cache/
