--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
 		"psr/http-client": "1.0.3",
 		"symfony/http-kernel": "7.1.3",
 		"twbs/bootstrap": "^5.3",
-		"twbs/bootstrap-icons": "^1.11"
+		"twbs/bootstrap-icons": "^1.11",
+		"jaybizzle/crawler-detect": "^1.2"
 	},
 	"minimum-stability": "stable",
 	"config": {
