backport staff page to biscuit
biscuit is technically still the default frontend on opensb. charla is actually an optional frontend that is only the default on squarebracket.

also fixed gitignore

--- a/private/skins/.gitignore
+++ b/private/skins/.gitignore
@@ -3,10 +3,10 @@
 # don't gitignore pre-existing skins
 
 # common (stuff shared between skins)
-!/common
+!/common/**
 
 # error template
-!/error
+!/error/**
 
 # finalium 2 (biscuit)
-!/biscuit
+!/biscuit/**
