hardcode versions in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
   "require": {
     "twig/twig": "3.17.1",
-    "intervention/image": "^3.2",
+    "intervention/image": "3.9.1",
     "erusev/parsedown": "dev-master",
     "php-ffmpeg/php-ffmpeg": "1.3.0",
     "ext-pdo": "*",
     "twig/string-extra": "3.17.0",
     "psr/http-client": "1.0.3",
-    "twbs/bootstrap": "^5.3",
-    "twbs/bootstrap-icons": "^1.11",
-    "jaybizzle/crawler-detect": "^1.2",
-    "filp/whoops": "^2.16",
+    "twbs/bootstrap": "5.3.3",
+    "twbs/bootstrap-icons": "1.11.3",
+    "jaybizzle/crawler-detect": "1.3.0",
+    "filp/whoops": "2.16.0",
     "sendgrid/sendgrid": "dev-allow_starkbank_ecdsa_2",
     "ext-curl": "*"
   },
